--- a/app/src/main/res/layout/activity_formatting_help.xml
+++ b/app/src/main/res/layout/activity_formatting_help.xml
@@ -29,7 +29,7 @@
         android:orientation="vertical"
         tools:context="it.niedermann.owncloud.notes.edit.EditNoteActivity">
 
-        <com.yydcdut.markdown.MarkdownTextView
+        <it.niedermann.android.markdown.markwon.MarkwonMarkdownViewer
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
