--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -33,6 +33,7 @@
                 android:textColor="@color/fg_default"
                 android:textIsSelectable="true"
                 android:theme="@style/textViewStyle"
+                android:enabled="false"
                 tools:text="@tools:sample/lorem/random" />
         </ScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
