Workaround selection background color of fenced code blocks

--- a/markdown/src/main/res/values/colors.xml
+++ b/markdown/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="bg_highlighted">#eee</color>
     <color name="search_color">#0082C9</color>
+    <color name="bg_highlighted">#eee</color>
+    <color name="bg_code">#0e000000</color>
 </resources>
