--- a/markdown/src/main/res/values-night/colors.xml
+++ b/markdown/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="bg_highlighted">#2a2a2a</color>
+    <color name="bg_code">#11ffffff</color>
 </resources>
