--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/widget_background"
+    android:background="@drawable/widget_background"
     android:orientation="vertical">
 
     <!-- Widget header -->
@@ -38,7 +38,7 @@
             android:paddingStart="@dimen/widget_note_list_hdr_padding"
             android:paddingEnd="@dimen/widget_note_list_hdr_padding"
             android:singleLine="true"
-            android:textColor="@color/widget_fg_contrast"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             tools:text="@tools:sample/lorem/random" />
 
