--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -20,4 +20,7 @@
     <color name="appbar">#212121</color>
 
     <color name="category_background">@color/defaultBrand</color>
+
+    <color name="widget_background">#dd000000</color>
+    <color name="widget_foreground">#d8d8d8</color>
 </resources>
