--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
 
     <color name="widget_background">#ddffffff</color>
     <color name="widget_foreground">#222222</color>
+    <color name="widget_foreground_strong">#121212</color>
 </resources>
