--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <!-- Widgets -->
     <dimen name="widget_outer_radius">@dimen/spacer_1x</dimen>
     <dimen name="widget_inner_radius">@dimen/spacer_1hx</dimen>
+    <dimen name="widget_divider">1dp</dimen>
 
     <dimen name="widget_margin">@dimen/spacer_1x</dimen>
     <dimen name="widget_single_note_padding">10dp</dimen>
