--- a/app/src/main/res/layout/widget_entry_add.xml
+++ b/app/src/main/res/layout/widget_entry_add.xml
@@ -6,10 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingStart="@dimen/spacer_1hx"
-    android:paddingTop="@dimen/spacer_1x"
-    android:paddingEnd="@dimen/spacer_1hx"
-    android:paddingBottom="@dimen/spacer_1x">
+    android:padding="@dimen/spacer_1x">
 
     <ImageView
         android:id="@+id/widget_entry_fav_icon"
