--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -10,8 +10,8 @@
         android:id="@+id/note_list_widget_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@color/widget_divider"
-        android:dividerHeight="@dimen/widget_divider"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="@null"
         android:textAppearance="?android:attr/textAppearanceMedium"
         tools:listitem="@layout/widget_entry" />
 
