--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/widget_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingStart="@dimen/spacer_1x"
+    android:paddingTop="@dimen/spacer_1x"
+    android:paddingEnd="@dimen/spacer_1hx"
+    android:paddingBottom="@dimen/spacer_1x">
 
     <ListView
         android:id="@+id/note_list_widget_lv"
