--- a/app/src/main/res/layout/widget_entry_add.xml
+++ b/app/src/main/res/layout/widget_entry_add.xml
@@ -15,7 +15,6 @@
         android:layout_weight="1"
         android:ellipsize="middle"
         android:paddingStart="30dp"
-        android:paddingTop="@null"
         android:paddingEnd="@dimen/widget_note_list_outer_padding"
         android:paddingBottom="@dimen/spacer_1x"
         android:singleLine="true"
@@ -34,6 +33,6 @@
         android:foregroundGravity="center_vertical"
         android:paddingStart="@dimen/spacer_1x"
         android:paddingEnd="@dimen/spacer_1x"
-        android:paddingBottom="@dimen/spacer_1hx"
+        android:paddingBottom="@dimen/spacer_1x"
         app:srcCompat="@drawable/ic_add_blue_24dp" />
 </LinearLayout>
