--- a/markdown/src/main/res/values-night/colors.xml
+++ b/markdown/src/main/res/values-night/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="bg_highlighted">#2a2a2a</color>
     <color name="bg_code">#11ffffff</color>
+    <color name="bullet_point">#bbb</color>
+    <color name="block_quote">#666</color>
 </resources>
