--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -33,6 +33,7 @@
             android:ems="10"
             android:gravity="top"
             android:inputType="textMultiLine|textCapSentences"
+            android:lineSpacingMultiplier="@dimen/note_line_spacing"
             android:padding="@dimen/spacer_2x"
             android:paddingStart="@dimen/spacer_2x"
             android:paddingEnd="@dimen/spacer_2x"
