--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacer_activity_sides"
                 android:layout_marginEnd="@dimen/spacer_activity_sides"
+                android:lineSpacingMultiplier="@dimen/note_line_spacing"
                 android:padding="@dimen/spacer_2x"
                 android:paddingStart="@dimen/spacer_2x"
                 android:paddingEnd="@dimen/spacer_2x"
