--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -11,10 +11,11 @@
             android:icon="@drawable/ic_network_wifi_grey600_24dp"
             android:key="@string/pref_key_wifi_only"
             android:layout="@layout/item_pref"
-            android:title="@string/settings_wifi_only" />
+            android:title="@string/settings_wifi_only"
+            app:defaultValue="true" />
 
         <ListPreference
-            android:defaultValue="@string/pref_value_sync_off"
+            android:defaultValue="@string/pref_value_sync_15_minutes"
             android:entries="@array/sync_entries"
             android:entryValues="@array/sync_values"
             android:icon="@drawable/ic_sync_black_24dp"
