#916 Use generic "Remove" as menu item

--- a/app/src/main/res/menu/menu_account.xml
+++ b/app/src/main/res/menu/menu_account.xml
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/delete"
         android:orderInCategory="30"
-        android:title="@string/remove_account"
+        android:title="@string/simple_remove"
         app:showAsAction="never" />
 
 </menu>
