--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -42,6 +42,7 @@
         android:id="@+id/searchPrev"
         style="@style/fab"
         android:layout_gravity="bottom|end"
+        android:contentDescription="@string/simple_prev"
         android:translationY="-56dp"
         android:visibility="gone"
         app:backgroundTint="@color/defaultBrand"
@@ -53,6 +54,7 @@
         android:id="@+id/searchNext"
         style="@style/fab"
         android:layout_gravity="bottom|end"
+        android:contentDescription="@string/simple_next"
         android:visibility="gone"
         app:backgroundTint="@color/defaultBrand"
         app:fabSize="mini"
