Fix a few lint warnings
Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/app/src/main/res/drawable/list_item_background_selector.xml
+++ b/app/src/main/res/drawable/list_item_background_selector.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?><!-- Selector is used for Background Colors in List Items -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/bg_highlighted">
     <!-- :selected -->
-    <item android:drawable="@color/bg_highlighted" android:state_selected="true" />
-    <item android:drawable="@color/bg_normal" />
-</selector>
+    <item>
+        <selector>
+            <item android:state_selected="true">
+                <color android:color="@color/bg_highlighted" />
+            </item>
+
+            <item android:state_activated="true">
+                <color android:color="@color/bg_highlighted" />
+            </item>
+
+            <item>
+                <color android:color="@color/bg_normal" />
+            </item>
+        </selector>
+    </item>
+</ripple>
