--- a/app/src/main/res/layout/fragment_about_credits_tab.xml
+++ b/app/src/main/res/layout/fragment_about_credits_tab.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,13 +14,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="30dp"
             android:layout_marginTop="30dp"
-            android:drawableTop="@mipmap/ic_launcher"
+            android:layout_marginBottom="30dp"
             android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/fg_default_low"
-            android:textSize="26sp" />
+            android:textSize="26sp"
+            app:drawableTopCompat="@mipmap/ic_launcher" />
 
         <TextView
             style="?android:attr/listSeparatorTextViewStyle"
