--- a/app/src/main/res/layout/dialog_note_details.xml
+++ b/app/src/main/res/layout/dialog_note_details.xml
@@ -5,62 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/spacer_2x"
-        android:text="@string/simple_details"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@id/pin"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/pin"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@null"
-        android:src="@drawable/ic_baseline_push_pin_24"
-        app:layout_constraintBottom_toBottomOf="@id/details"
-        app:layout_constraintEnd_toStartOf="@id/share"
-        app:layout_constraintStart_toEndOf="@id/details"
-        app:layout_constraintTop_toTopOf="@id/details" />
-
-    <ImageButton
-        android:id="@+id/share"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@null"
-        android:src="@drawable/ic_share_white_24dp"
-        app:layout_constraintBottom_toBottomOf="@id/details"
-        app:layout_constraintEnd_toStartOf="@id/favorite"
-        app:layout_constraintStart_toEndOf="@id/pin"
-        app:layout_constraintTop_toTopOf="@id/details"
-        app:tint="@color/fg_default_low" />
-
-    <ImageButton
-        android:id="@+id/favorite"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@null"
-        android:src="@drawable/ic_star_grey_ccc_24dp"
-        app:layout_constraintBottom_toBottomOf="@id/details"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/share"
-        app:layout_constraintTop_toTopOf="@id/details" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/titleWrapper"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/change_note_title"
-        android:padding="@dimen/spacer_2x"
+        android:hint="@string/simple_title"
+        android:paddingStart="@dimen/spacer_2x"
+        android:paddingEnd="@dimen/spacer_2x"
+        android:paddingTop="@dimen/spacer_2x"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/title"
@@ -89,20 +45,76 @@
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/categories"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/spacer_1x"
+        android:paddingEnd="@dimen/spacer_1x"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@id/modified"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/categoryWrapper"
+        tools:listitem="@layout/item_category" />
+
     <TextView
         android:id="@+id/modified"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacer_2x"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/spacer_2x"
+        app:layout_constraintBottom_toTopOf="@id/barrier"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/categories"
         tools:text="Last modified: Yesterday" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="details,share,pin,favorite" />
+        app:barrierDirection="top"
+        app:constraint_referenced_ids="share,pin,favorite" />
+
+    <ImageButton
+        android:id="@+id/pin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/pin_to_homescreen"
+        android:padding="@dimen/spacer_2x"
+        android:src="@drawable/ic_baseline_push_pin_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/share"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/share"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/menu_share"
+        android:padding="@dimen/spacer_2x"
+        android:src="@drawable/ic_share_white_24dp"
+        app:layout_constraintBottom_toBottomOf="@id/pin"
+        app:layout_constraintEnd_toStartOf="@id/favorite"
+        app:layout_constraintStart_toEndOf="@id/pin"
+        app:layout_constraintTop_toTopOf="@id/pin"
+        app:tint="@color/fg_default_low" />
+
+    <ImageButton
+        android:id="@+id/favorite"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/label_favorites"
+        android:padding="@dimen/spacer_2x"
+        android:src="@drawable/ic_star_grey_ccc_24dp"
+        app:layout_constraintBottom_toBottomOf="@id/pin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/share"
+        app:layout_constraintTop_toTopOf="@id/pin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
