#761 Import notes one by one to avoid read timeout for the first sync
Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/app/src/main/res/layout/activity_import_account.xml
+++ b/app/src/main/res/layout/activity_import_account.xml
@@ -65,12 +65,24 @@
 
         <ProgressBar
             android:id="@+id/progress_circular"
-            android:layout_width="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/add_button"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/spacer_5x"
+            android:indeterminate="true"
             android:indeterminateTint="@color/defaultBrand"
             android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/progress_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/progress_circular"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/spacer_2x"
+            android:visibility="gone"
+            tools:text="@string/progress_import_indeterminate" />
     </RelativeLayout>
 </ScrollView>
