--- a/app/src/main/res/values-v31/dimens.xml
+++ b/app/src/main/res/values-v31/dimens.xml
@@ -7,7 +7,6 @@
     <dimen name="spacer_1x">8dp</dimen>
     <dimen name="spacer_2x">16dp</dimen>
     <dimen name="spacer_3x">24dp</dimen>
-    <dimen name="spacer_4x">36dp</dimen>
     <dimen name="spacer_5x">40dp</dimen>
 
     <dimen name="avatar_size">36dp</dimen>
@@ -32,9 +31,9 @@
     <item format="float" name="note_line_spacing" type="dimen">1.15</item>
 
     <!-- Widgets -->
-    <dimen name="widget_outer_radius">@dimen/spacer_4x</dimen>
-    <dimen name="widget_margin">@dimen/spacer_4x</dimen>
-    <dimen name="widget_inner_padding_vertical">@dimen/spacer_2x</dimen>
+    <dimen name="widget_outer_radius">@android:dimen/system_app_widget_background_radius</dimen>
+    <dimen name="widget_margin">@android:dimen/system_app_widget_background_radius</dimen>
+    <dimen name="widget_inner_padding_vertical">@android:dimen/system_app_widget_inner_radius</dimen>
     <dimen name="widget_inner_padding_horizontal">@dimen/spacer_1x</dimen>
     <dimen name="widget_note_list_outer_padding">4dp</dimen>
     <dimen name="widget_note_list_inner_padding">4dp</dimen>
