--- a/app/src/main/res/layout/activity_exception.xml
+++ b/app/src/main/res/layout/activity_exception.xml
@@ -11,6 +11,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:layout_marginStart="@dimen/spacer_activity_sides"
+        android:layout_marginEnd="@dimen/spacer_activity_sides"
         app:contentInsetStartWithNavigation="0dp"
         app:elevation="4dp"
         app:titleMarginStart="0dp"
