--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -17,91 +17,91 @@
             android:layout_height="?attr/actionBarSize"
             app:elevation="0dp">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-                app:contentInsetStartWithNavigation="0dp"
-                app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
-                app:titleMarginStart="0dp"
-                tools:title="@string/app_name">
+                android:layout_height="wrap_content">
 
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/search_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </androidx.appcompat.widget.Toolbar>
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/home_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacer_1x"
-                android:layout_marginTop="@dimen/spacer_1hx"
-                android:layout_marginEnd="@dimen/spacer_1x"
-                android:layout_marginBottom="@dimen/spacer_1hx"
-                app:cardBackgroundColor="@color/appbar"
-                app:cardCornerRadius="@dimen/spacer_4x"
-                app:cardElevation="2dp"
-                app:strokeWidth="0dp">
-
-                <LinearLayout
+                <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginStart="@dimen/spacer_activity_sides"
+                    android:layout_marginTop="@dimen/spacer_1hx"
+                    android:layout_marginEnd="@dimen/spacer_activity_sides"
+                    android:layout_marginBottom="@dimen/spacer_1hx"
+                    app:cardBackgroundColor="@color/appbar"
+                    app:cardCornerRadius="@dimen/spacer_4x"
+                    app:cardElevation="2dp"
+                    app:strokeWidth="0dp">
 
-                    <androidx.appcompat.widget.AppCompatImageButton
-                        android:id="@+id/menu_button"
-                        android:layout_width="wrap_content"
+                    <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/home_toolbar"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:paddingStart="@dimen/spacer_1x"
-                        android:paddingTop="@dimen/spacer_2x"
-                        android:paddingEnd="@dimen/spacer_1x"
-                        android:paddingBottom="@dimen/spacer_2x"
-                        android:tint="?attr/colorAccent"
-                        app:srcCompat="@drawable/ic_baseline_menu_24" />
+                        android:orientation="horizontal"
+                        app:contentInsetStartWithNavigation="0dp"
+                        app:titleMarginStart="0dp">
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/search_text"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="@dimen/spacer_1x"
-                        android:layout_marginEnd="@dimen/spacer_1x"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:gravity="start"
-                        android:lines="1"
-                        android:textSize="16sp"
-                        tools:text="@string/search_in_all" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/sorting_method"
-                        android:layout_width="?attr/actionBarSize"
-                        android:layout_height="?attr/actionBarSize"
-                        android:layout_gravity="center_vertical|end"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:contentDescription="@string/action_sorting_method"
-                        android:padding="@dimen/spacer_2x"
-                        android:tint="?attr/colorAccent"
-                        android:translationX="@dimen/spacer_1x"
-                        app:srcCompat="@drawable/alphabetical_asc" />
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/search_text"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight="1"
+                                android:ellipsize="end"
+                                android:gravity="start"
+                                android:lines="1"
+                                android:textSize="16sp"
+                                tools:text="@string/search_in_all" />
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/launchAccountSwitcher"
-                        android:layout_width="?attr/actionBarSize"
-                        android:layout_height="?attr/actionBarSize"
-                        android:layout_gravity="center_vertical|end"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:padding="12dp"
-                        android:tooltipText="@string/manage_accounts"
-                        app:srcCompat="@drawable/ic_account_circle_grey_24dp"
-                        tools:targetApi="o" />
-                </LinearLayout>
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/sorting_method"
+                                android:layout_width="?attr/actionBarSize"
+                                android:layout_height="?attr/actionBarSize"
+                                android:layout_gravity="center_vertical|end"
+                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:contentDescription="@string/action_sorting_method"
+                                android:padding="@dimen/spacer_2x"
+                                android:tint="?attr/colorAccent"
+                                android:translationX="@dimen/spacer_1x"
+                                app:srcCompat="@drawable/alphabetical_asc" />
 
-            </com.google.android.material.card.MaterialCardView>
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/launchAccountSwitcher"
+                                android:layout_width="?attr/actionBarSize"
+                                android:layout_height="?attr/actionBarSize"
+                                android:layout_gravity="center_vertical|end"
+                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:padding="12dp"
+                                android:tooltipText="@string/manage_accounts"
+                                app:srcCompat="@drawable/ic_account_circle_grey_24dp"
+                                tools:targetApi="o" />
+                        </LinearLayout>
+                    </androidx.appcompat.widget.Toolbar>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/search_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/spacer_activity_sides"
+                    android:layout_marginEnd="@dimen/spacer_activity_sides"
+                    android:visibility="gone"
+                    app:contentInsetStartWithNavigation="0dp"
+                    app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
+                    app:titleMarginStart="0dp"
+                    tools:title="@string/app_name">
+
+                    <androidx.appcompat.widget.SearchView
+                        android:id="@+id/search_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </androidx.appcompat.widget.Toolbar>
+            </FrameLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
