Add monochrome icon

--- a/app/src/dev/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/dev/res/drawable/ic_launcher_foreground.xml
@@ -4,7 +4,8 @@
     android:height="108dp"
     android:viewportWidth="66.666664"
     android:viewportHeight="66.666664">
-    <group android:translateX="17.333334"
+    <group
+        android:translateX="17.333334"
         android:translateY="17.333334">
         <path
             android:fillColor="#fff"
