--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -40,24 +40,26 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchPrev"
-        style="@style/fab"
+        style="?attr/floatingActionButtonSmallSecondaryStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:contentDescription="@string/simple_prev"
         android:translationY="-56dp"
         android:visibility="gone"
         app:backgroundTint="@color/defaultBrand"
-        app:fabSize="mini"
         app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp"
         tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchNext"
-        style="@style/fab"
+        style="?attr/floatingActionButtonSmallSecondaryStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:contentDescription="@string/simple_next"
         android:visibility="gone"
         app:backgroundTint="@color/defaultBrand"
-        app:fabSize="mini"
         app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp"
         tools:visibility="visible" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
