--- a/app/src/main/res/drawable/bg_navdrawer_item.xml
+++ b/app/src/main/res/drawable/bg_navdrawer_item.xml
@@ -10,7 +10,7 @@
         <shape android:shape="rectangle">
             <!-- value of color is irrelevant, but solid needs to be defined for mask to work -->
             <solid android:color="@color/bg_highlighted" />
-            <corners android:radius="@dimen/spacer_1hx" />
+            <corners android:radius="@dimen/spacer_5x" />
         </shape>
     </item>
 
@@ -21,14 +21,14 @@
         <selector>
             <item android:state_selected="true">
                 <shape android:shape="rectangle">
-                    <corners android:radius="@dimen/spacer_1hx" />
+                    <corners android:radius="@dimen/spacer_5x" />
                     <solid android:color="@color/bg_highlighted" />
                 </shape>
             </item>
 
             <item>
                 <shape android:shape="rectangle">
-                    <corners android:radius="@dimen/spacer_1hx" />
+                    <corners android:radius="@dimen/spacer_5x" />
                 </shape>
             </item>
         </selector>
