--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
 
     <color name="primary">#ffffff</color>
     <color name="accent">#121212</color>
+    <color name="danger">#d40000</color>
 
     <color name="defaultBrand">#0082C9</color>
 
@@ -21,7 +22,8 @@
     <color name="fg_secondary">#999999</color>
     <color name="fg_contrast">#ffffff</color>
 
-    <color name="icon_color_default">#757575</color>
+    <color name="grey600">#757575</color>
+    <color name="icon_color_default">@color/grey600</color>
 
     <color name="category_background">@color/bg_normal</color>
     <color name="category_border">@color/defaultBrand</color>
